[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc2022"
path = "src/main.rs"

[lib]
name = "aoc2022_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
structopt = "0.3.26"
